# aperiodic_tilings

./: .gitignore  CMakeLists.txt  README.md  aperiodic_tiling.cpp  penrose.cpp  penrose.hpp
geometry/: CMakeLists.txt  point.cpp  point.hpp  tiling.cpp  tiling.hpp  triangle.cpp  triangle.hpp
heptagonal/: .scalene_triangle.cpp.swp  CMakeLists.txt  constants.hpp  middle_triangle.cpp  middle_triangle.hpp  reverse_triangle.cpp  reverse_triangle.hpp  scalene_triangle.cpp  scalene_triangle.hpp  tall_triangle.cpp  tall_triangle.hpp  tiling.cpp  tiling.hpp  wide_triangle.cpp  wide_triangle.hpp
pentagonal/: CMakeLists.txt  constants.hpp  tall_triangle.cpp  tall_triangle.hpp  tiling.cpp  tiling.hpp  wide_triangle.cpp  wide_triangle.hpp
